2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove AC_HEADER_TIME invocation. Instead simply test
	for <time.h> and <sys/time.h>.
	* m4/general.m4 (CL_MODULE_COMMON_CHECKS): Likewise.
	* unix.d: Don't test TIME_WITH_SYS_TIME. Assume <time.h> and
	<sys/time.h> are compatible.
	* modules/berkeley-db/bdb.c: Likewise.
	* modules/clx/new-clx/clx.f: Likewise.
	* modules/rawsock/rawsock.c: Likewise.
	* modules/syscalls/calls.c: Likewise.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove AC_STRUCT_TM invocation.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove CL_PERROR invocation.
	* _clisp.c (perror): Remove declaration fallback.
	* win32.d (HAVE_PERROR_DECL): Remove macro.
	* m4/perror.m4: Remove file.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* m4/proto.m4 (CL_PROTO_RET, CL_PROTO_TRY, CL_PROTO_CONST): Remove
	TRAD-DECL argument.
	* m4/connect.m4 (CL_CONNECT): Update.
	* m4/getpagesize.m4 (CL_GETPAGESIZE): Update.
	* m4/ioctl.m4 (CL_IOCTL): Update.
	* m4/putenv.m4 (CL_PUTENV): Update.
	* m4/readline.m4 (CL_READLINE): Update.
	* m4/rlimit.m4 (CL_RLIMIT): Update.
	* m4/rusage.m4 (CL_RUSAGE): Update.
	* m4/select.m4 (CL_SELECT): Update.
	* m4/tcpconn.m4 (CL_TCPCONN): Update.
	* m4/waitpid.m4 (CL_WAITPID): Update.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* m4/termios.m4 (RL_TERM): Remove macro.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove CL_IRIX_SUN invocation.
	* m4/sys-irix.m4: Remove file.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove CL_DYNIX_SEQ invocation.
	* m4/sys-dynix.m4: Remove file.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* m4/signal.m4 (RL_RETSIGTYPE): Remove macro.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* m4/siginterrupt.m4 (CL_SIGINTERRUPT): Don't test for sigvec.
	* unixaux.d (siginterrupt): Remove sigvec based emulation.

2008-05-31  Bruno Haible  <bruno@clisp.org>
